add http(s) for pulling in steemjs lib

--- a/steempostexample.html
+++ b/steempostexample.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>steem-js posting example</title></head>
-<script src="http://cdn.steemjs.com/lib/latest/steem.min.js"></script>
+<script src="https://cdn.steemjs.com/lib/latest/steem.min.js"></script>
 <script language="JavaScript">
 function postArticle()
 {
